[package]
name = "y2020"
version = "0.1.0"
authors = ["Michael Gerhaeuser <michael.gerhaeuser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.

[dependencies]
regex = "1"
lazy_static = "1.4.0"
num = "0.3.1"
rand = "0.7.2"
pathfinding = "2.0.1"
